# advaya-hackathon

./: build_help.txt  build_output.txt  capacitor.config.ts  features README.md  package-lock.json  package.json  project-ui-features.md  tailwind.config.ts
android/: capacitor.settings.gradle
android/app/: build.gradle  capacitor.build.gradle
android/app/src/main/java/com/voidtech/app/: MainActivity.java
android/app/src/main/res/values/: strings.xml
backend/: .dockerignore  Dockerfile  README.md  main.py  output.md  pyproject.toml  webpage_summaries.json
backend/model/: fall_detector_ann.joblib  scaler.joblib
extension/: manifest.json  popup.html  popup.js
src/app/: globals.css  layout.tsx  page.tsx
src/app/finance/: page.tsx
src/app/home/: page.tsx
src/app/map/: page.tsx
src/app/safety/: page.tsx
src/app/scan/: page.tsx
src/app/web/: page.tsx
src/components/: BottomNav.tsx  CapacitorLoader.tsx  CaretakerDashboard.tsx  ChatBot.tsx  CommunitySummary.tsx  FinanceSummary.tsx  ReportTimeline.tsx
src/components/components_map/: CommunityOverlay.tsx  Controls.tsx  EventCard.tsx  MapView.tsx  StatusBadge.tsx
src/hooks/: useCommunity.ts  useSMSListener.ts
src/lib/: types.ts
src/services/: smsListener.ts
